# cowork-forge

./: .gitignore  AGENTS.md  BUGFIX_HITL_EDIT_IGNORED.md  BUGFIX_PLAN_CRITIC_FEEDBACK.md  COWORK_GUI_ITERATION_PLAN.md  Cargo.toml  GUI_ARCHITECTURE_PLAN.md  GUI_ENHANCEMENT_PLAN.md  README.md  README_zh.md  REFACTORING_SUMMARY.md  V2-summary.md  adk-rust-learning.md  agents_mod_backup.rs  cargo_check_final_window_logic.txt  cargo_check_fix_window_logic.txt  cargo_check_gui_workspace.txt  cargo_check_workspace_fix.txt  cargo_check_workspace_fix2.txt  check_errors.txt  config.toml  config.toml.example
crates/cowork-cli/: Cargo.toml
crates/cowork-cli-v2/: Cargo.toml
crates/cowork-cli-v2/src/: main.rs
crates/cowork-cli/src/: main.rs  utils.rs
crates/cowork-cli/src/commands/: config.rs  continue_cmd.rs  delete.rs  import.rs  init.rs  iter.rs  knowledge.rs  list.rs  mod.rs  show.rs  status.rs
crates/cowork-core/: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  config.example.toml
crates/cowork-core/.cowork/01f1335d-3828-4564-b8af-db1e21762ac4/: meta.json
crates/cowork-core/.cowork/0221d746-4733-45bb-a3af-28fe098dbd96/: meta.json
crates/cowork-core/.cowork/02a641f1-7134-4751-a1ab-cf5b9c5ad890/: meta.json
crates/cowork-core/.cowork/044545a1-a211-4698-ab12-8fdf6ee80d08/: meta.json
crates/cowork-core/.cowork/055b967d-6b3d-4816-8c57-04747de23222/: meta.json
crates/cowork-core/.cowork/073e47c7-3772-4418-9ea2-72df1ce00d13/: meta.json
crates/cowork-core/.cowork/0a671c4f-e427-4b5d-ab6e-a008f51dd566/: meta.json
crates/cowork-core/.cowork/0da8b95d-5f3d-401c-b906-6f23a63658de/: meta.json
crates/cowork-core/.cowork/11ed674e-7e85-43eb-ad6f-58d396de3a10/: meta.json
crates/cowork-core/.cowork/1a42fac8-ea44-42e0-9e56-11f65a9349da/: meta.json
crates/cowork-core/.cowork/1b4a6c89-e330-414d-a432-bc990986157a/: meta.json
crates/cowork-core/.cowork/21570e6e-cc5c-439b-95db-be3b13b4cf18/: meta.json
crates/cowork-core/.cowork/21f61e88-906d-48e0-895f-305d10a38b9f/: meta.json
crates/cowork-core/.cowork/223d2fb5-247a-4f9a-8166-2fcfb1be1165/: meta.json
crates/cowork-core/.cowork/24114419-c152-4321-b572-739301f139d0/: meta.json
crates/cowork-core/.cowork/25d5b34e-bbde-4a15-8982-16ea6a2059d7/: meta.json
crates/cowork-core/.cowork/2b903d61-7afc-4bfc-a3a0-19b0df8672c2/: meta.json
crates/cowork-core/.cowork/2d0d3f8d-02dc-4eca-af86-0b6e402f9325/: meta.json
crates/cowork-core/.cowork/2d366c5c-bd44-463d-b90b-1d8e4b847b8c/: meta.json
crates/cowork-core/.cowork/3a561f95-853b-4486-8f53-dde46bb4f0e7/: meta.json
crates/cowork-core/.cowork/3ae07a90-2fa6-46d4-a04f-408d895786d0/: meta.json
crates/cowork-core/.cowork/3b18d508-9547-480f-9ff9-636fe68ade51/: meta.json
crates/cowork-core/.cowork/3becc3e5-65d9-4c56-ac56-27396d3305dd/: meta.json
crates/cowork-core/.cowork/3d3a7c02-8112-446e-ab49-1676ef39e201/: meta.json
crates/cowork-core/.cowork/3fa792c4-b45d-4065-8cfc-cf8fc6fb6af1/: meta.json
crates/cowork-core/.cowork/4090d479-162c-468d-8ee3-cc8dc9ba8626/: meta.json
crates/cowork-core/.cowork/40e02b83-821e-4b86-95d4-1174f5a800d2/: meta.json
crates/cowork-core/.cowork/4777f748-7b65-4e1f-a538-061eea4edf75/: meta.json
crates/cowork-core/.cowork/4983b5d9-5ffe-4c1f-8592-889799df7377/: meta.json
crates/cowork-core/.cowork/4af7bb51-4411-47e5-9b7e-05301fe19b8c/: meta.json
crates/cowork-core/.cowork/4e040966-8d77-4624-ba6e-b969669b34a3/: meta.json
crates/cowork-core/.cowork/4fd7060c-7e6a-4e18-b789-f19949d97020/: meta.json
crates/cowork-core/.cowork/5041d84c-3de7-4b55-811f-889cd8c63865/: meta.json
crates/cowork-core/.cowork/5219c4d5-03ba-4fee-b47a-183662952d74/: meta.json
crates/cowork-core/.cowork/52b20d03-9889-460f-b949-16f66891b9f5/: meta.json
crates/cowork-core/.cowork/54bc234f-68ed-4a18-824f-17a8a29e53e5/: meta.json
crates/cowork-core/.cowork/5a463cb6-864e-4f93-bfe5-fbfad2f66dc9/: meta.json
crates/cowork-core/.cowork/693ca48f-259e-4948-bfeb-edb43f6c7904/: meta.json
crates/cowork-core/.cowork/693d61c4-183a-4bdb-995f-899b3cc24f1c/: meta.json
crates/cowork-core/.cowork/6a011a68-05c9-4d60-b79d-961ca0a25b5d/: meta.json
crates/cowork-core/.cowork/6e73ae43-b175-4cab-9f43-1cf789c0e513/: meta.json
crates/cowork-core/.cowork/704568c5-0963-41b9-b30e-334dd59f3ec3/: meta.json
crates/cowork-core/.cowork/7080a187-412b-4ef2-b77b-1da4cb8c28e2/: meta.json
crates/cowork-core/.cowork/72177a03-723f-4432-820c-5ad6cb0009e7/: meta.json
crates/cowork-core/.cowork/72b8e0d2-56b7-4c25-aa51-d9eeb55a9f71/: meta.json
crates/cowork-core/.cowork/752ef8e5-edf4-488f-bc54-8cf51180563a/: meta.json
crates/cowork-core/.cowork/764e07f7-839a-4b1a-bc69-439e5bad135f/: meta.json
crates/cowork-core/.cowork/77eb9daa-2e24-4d92-9e32-9f9a63797027/: meta.json
crates/cowork-core/.cowork/7a93a905-6200-40c2-9f21-426e3a72a4b1/: meta.json
crates/cowork-core/.cowork/80530373-0ee9-4cc9-b916-2008737bfe61/: meta.json
crates/cowork-core/.cowork/81232465-2c41-4a9c-bc32-854d530a73f0/: meta.json
crates/cowork-core/.cowork/820c90a0-ca1f-4ee2-ad84-60518dc19b4c/: meta.json
crates/cowork-core/.cowork/824e634b-a28b-4f3e-a24a-d03c850cc137/: meta.json
crates/cowork-core/.cowork/83550ed1-3b51-42df-8932-49b2423f3ead/: meta.json
crates/cowork-core/.cowork/893b2c35-2537-40bd-9e74-65a64186c0a2/: meta.json
crates/cowork-core/.cowork/89e2726f-8928-4d11-bfe7-81839002c4e3/: meta.json
crates/cowork-core/.cowork/8a425da0-4ebf-49d2-bd37-0de47dd60391/: meta.json
crates/cowork-core/.cowork/8aecc5a6-930d-4137-ae11-e61ac70b53f3/: meta.json
crates/cowork-core/.cowork/8b19bc9e-b0eb-49d5-b27c-69d48ed1227d/: meta.json
crates/cowork-core/.cowork/8c2e3161-2576-41fc-9217-a315a15cefda/: meta.json
crates/cowork-core/.cowork/8c3f32bc-ff14-4085-ad41-ea244194d93e/: meta.json
crates/cowork-core/.cowork/8dd6c082-e7da-4edd-923e-35ffd7d16483/: meta.json
crates/cowork-core/src/: config.rs  data.rs  event_bus.rs  lib.rs  memory.rs  project_runtime.rs  runtime_analyzer.rs  runtime_security.rs  tech_stack.rs  workflow.rs
crates/cowork-gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+654 files in other folders)
