[workspace]
resolver = "2"
members = [
    "crates/cowork-core",
    "crates/cowork-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["jiangmeng03"]
license = "MIT"
repository = "https://github.com/jiangmeng03/cowork-rs"

[workspace.dependencies]
# ADK Rust framework
adk-rust = "0.2.1"
adk-model = { version = "0.2.1", features = ["openai"] }

# Core dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.9"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and ID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# File and path
walkdir = "2"
ignore = "0.4"

# Futures
futures = "0.3"

# Testing
tempfile = "3"
