[workspace]
resolver = "2"
members = [
    "crates/cowork-core",
    "crates/cowork-cli",
    "crates/cowork-gui/src-tauri",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["Sopaco"]
license = "MIT"
repository = "https://github.com/sopaco/cowork-forge"

[workspace.dependencies]
# ADK Rust framework
adk-rust = "0.3.0"
adk-core = "0.3.0"
adk-agent = "0.3.0"
adk-model = { version = "0.3.0", features = ["openai"] }
adk-tool = "0.3.0"
adk-runner = "0.3.0"
adk-session = "0.3.0"

# Core dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "1.0"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and ID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# File and path
dirs = "6"
walkdir = "2"
ignore = "0.4"

# Futures
futures = "0.3"

# Testing
tempfile = "3"

# ACP (Agent Client Protocol) for external agent integration
agent-client-protocol = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
