[package]
name = "cowork-cli-v2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered software development system V2 - CLI interface"

[[bin]]
name = "cowork-v2"
path = "src/main.rs"

[dependencies]
# Core library
cowork-core-v2 = { path = "../cowork-core-v2" }

# ADK Runner
adk-runner = "0.2.1"
adk-session = "0.2.1"
adk-core = "0.2.1"

# CLI
clap = { workspace = true }
dialoguer = "0.12"
console = "0.16"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# File system
dirs = "6.0"
