[package]
name = "cowork-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered software development system - CLI interface"

[[bin]]
name = "cowork"
path = "src/main.rs"

[dependencies]
# Core library
cowork-core = { path = "../cowork-core" }

# ADK Runner
adk-core = { workspace = true }
adk-runner = { workspace = true }
adk-session = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Time
chrono = { workspace = true }

# File system
walkdir = { workspace = true }
dirs = { workspace = true }
