[package]
name = "cowork-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered software development system - Core library with adk-rust framework"

[dependencies]
# ADK Rust framework (CRITICAL: Keep version at 0.2.1)
adk-rust = "0.2.1"
adk-core = "0.2.1"
adk-agent = "0.2.1"
adk-model = { version = "0.2.1", features = ["openai"] }
adk-tool = "0.2.1"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
toml = { workspace = true }

# Time and ID
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# File operations
walkdir = { workspace = true }
ignore = { workspace = true }

# HTTP client (for custom LLM provider)
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI interaction (for HITL tools)
dialoguer = { workspace = true }
console = { workspace = true }

# Global state for InteractiveBackend
once_cell = "1.19"

# Regex for validation
regex = "1"

[dev-dependencies]
tempfile = "3.8"

# JSON Schema (must match adk-tool version)
schemars = "0.8"
