[package]
name = "cowork-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered software development system - Core library with adk-rust framework"

[dependencies]
# ADK Rust framework
adk-rust = { workspace = true }
adk-core = { workspace = true }
adk-agent = { workspace = true }
adk-model = { workspace = true, features = ["openai"] }
adk-tool = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
toml = { workspace = true }

# Time and ID
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# File operations
walkdir = { workspace = true }
ignore = { workspace = true }

# HTTP client (for custom LLM provider)
reqwest = { version = "0.13", features = ["json", "stream"] }

# CLI interaction (for HITL tools)
dialoguer = { workspace = true }
console = { workspace = true }

# Global state for InteractiveBackend
once_cell = "1.21"

# Regex for validation
regex = "1"

# ACP (Agent Client Protocol) for external agent integration
agent-client-protocol = { workspace = true }

# Async utilities
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# JSON Schema (must match adk-tool version)
schemars = "1.0"

# ACP (Agent Client Protocol) for external agent integration
agent-client-protocol = { workspace = true }
