[package]
name = "cowork-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cowork Forge GUI"

[lib]
name = "cowork_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "full"] }
tokio-stream = "0.1"
async-trait = "0.1"
chrono = "0.4"
uuid = { workspace = true }
anyhow = "1"
thiserror = "2"
futures = "0.3"

# Preview server
tiny_http = "0.12"
attohttpc = "0.30"
urlencoding = "2.1"

# Global state
lazy_static = "1.5"

# Logging
tracing = "0.1"

# File system
dirs = { workspace = true }

# System locale (lightweight, no external process)
sys-locale = "0.3"

# Cowork Core
cowork-core = { path = "../../cowork-core" }

# ADK (Agent Development Kit)
adk-core = { workspace = true }
adk-runner = { workspace = true }
adk-session = { workspace = true }
adk-skill = { workspace = true }
adk-tool = { workspace = true, features = ["http-transport"] }
which = "8.0.0"
